--- a/vr-environments.html
+++ b/vr-environments.html
@@ -36,7 +36,7 @@
 
 	    <main class="grid-item main">
 	    	<h1>Opdracht</h1>
-	    	<h3>Mad Mapper</h3>
+	    	<h2>Mad Mapper</h2>
 	    	<p>Voor de opdracht van ‘virtual reality-environment’ hebben ik samen met een paar groepsgenoten een projectie gemaakt. De projectie is gemaakt met het programma ‘MadMapper’ en hiermee kunnen projecties gemaakt worden die op bijvoorbeeld een specifiek voorwerp perfect past. De projectie kan verschillende interactiviteiten bevatten en gebruiken, waardoor hij iets anders laat zien. </p>
 
 	    	<p>Wij hebben ervoor gekozen om twee projecties te maken: een projectie met een afbeelding van appels en een projectie met kwallen die bewegen op de beat, waarbij de helderheid van de afbeelding bepaald wordt door de geluiden uit de omgeving. </p>
@@ -48,6 +48,20 @@
 	    	<video src="images/vr-appel.mp4" controls muted class="vr-video"></video>
 	    	<video src="images/vr-eindopdracht.mp4" controls muted class="vr-video"></video>
 	    	<p>De video's zijn gemaakt door mijn groepsgenoot Eva van Gool.</p>
+	    </main>
+	    <main class="grid-item main2">
+	    	<h1>Unreal Engine</h1>
+	    	<p>Unreal engine is een programma dat gebruikt wordt om games mee te maken. Er worden zowel computerspellen als PlayStation spellen als VR-spellen mee gemaakt.  Het spel Fortnite is bijvoorbeeld ook in Unreal engine gemaakt. Voor mijn eerste opdracht moest ik in Unreal engine een banaan maken en deze moest uiteindelijk ook kunnen draaien. Gelukkig was de tutorial die erbij hoorde duidelijk en overzichtelijk, waardoor het mij goed lukte om een draaiende banaan te maken. </p>
+	    	<img src="images/vr-banaan.png" class="vr-image">
+	    	<video src="images/vr-draaiende-banaan.MOV" controls muted class="vr-video"></video>
+	    	<p>Voor de tweede opdracht moest ik een spel gaan maken, waarbij de banaan een groot onderdeel van was. De speler was een rode kubus en die kon zich voortbewegen in het veld, middel de toets w, a, s en d. In het veld kon ik meerdere bananen plaatsen en deze bananen moesten ‘gepakt’ worden door de rode kubus. Na veel proberen en crashen van mijn computer is het toch gelukt om het spel te maken. Het maken van een spel vind ik erg lastig om echt te begrijpen, maar met de tweede tutorial was het goed te doen en vond ik het ook gaaf om te zien dat ik echt zelf een spel kon maken. </p>
+	    	<video src="images/vr-spel.MOV" controls muted class="vr-video"></video>
+	    </main>
+	    <main class="grid-item main3">
+	    	<h1>Unreal Engine spel</h1>
+	    	<p>Ik heb in Unreal Engine een spel gemaakt waarin een pion bananen kon 'opeten'. Maar nu was het vervolg hierop om het spel op zo'n manier aan te passen dat er een extra element aan toegevoegd wordt.</p>
+	    	<p>Uiteindelijk heb ik een manier bedacht waarbij er bananen zijn met verschillende kleuren, en de pion kan deze bananen opeten. Maar hoe meer bananen de pion op eet, hoe donkerder de pion van kleur wordt. Hij is het donkerst/felst als alle bananen opgegeten zijn. </p>
+	    	<video src="images/unrealenginespel.MOV" controls muted class="vr-video"></video>
 	    </main>
 	    
 	    <footer class="grid-item foot">
