--- a/vr-environments.html
+++ b/vr-environments.html
@@ -61,7 +61,7 @@
 	    	<h1>Unreal Engine spel</h1>
 	    	<p>Ik heb in Unreal Engine een spel gemaakt waarin een pion bananen kon 'opeten'. Maar nu was het vervolg hierop om het spel op zo'n manier aan te passen dat er een extra element aan toegevoegd wordt.</p>
 	    	<p>Uiteindelijk heb ik een manier bedacht waarbij er bananen zijn met verschillende kleuren, en de pion kan deze bananen opeten. Maar hoe meer bananen de pion op eet, hoe donkerder de pion van kleur wordt. Hij is het donkerst/felst als alle bananen opgegeten zijn. </p>
-	    	<video src="images/unrealenginespel.MOV" controls muted class="vr-video"></video>
+	    	<video src="images/unrealenginespel.mp4" controls muted class="vr-video"></video>
 	    </main>
 	    
 	    <footer class="grid-item foot">
