--- a/excursion.html
+++ b/excursion.html
@@ -42,9 +42,9 @@
 	    	<img src="images/excursie1.png" class="ex-image" id="halfrotate">
 	    	<img src="images/excursie7.png" class="ex-image">
 	    	<img src="images/excursie8.png" class="ex-image">
-	    	<img src="images/excursie3.jpg" class="ex-image">
-	    	<img src="images/excursie5.jpg" class="ex-image">
-	    	<img src="images/excursie6.jpg" class="ex-image" id="halfrotate">
+	    	<img src="images/excursie3.JPG" class="ex-image">
+	    	<img src="images/excursie5.JPG" class="ex-image">
+	    	<img src="images/excursie6.JPG" class="ex-image" id="halfrotate">
 	    </main>
 
 	    <main class="grid-item main1">
